# rust-rf

./: .gitignore  Cargo.toml  DEPENDENCIES.md  LICENSE  PORTING_AUDIT.md  PORTING_MAP.md  README.md  build.rs  clippy.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  test.yml
.understand-anything/: .understandignore  fingerprints.json  meta.json  source-map.json
doc/: Makefile  README.md  README.txt  gh-pages.py  make.bat  requirements.txt
doc/source/: Makefile  conf.py  glossary.rst  index.rst  license.rst  notebook-porting.rst
doc/source/_templates/: indexsidebar.html
doc/source/_templates/autosummary/: class.rst
doc/source/api/: circuit.rst  constants.rst  frequency.rst  index.rst  instances.rst  mathFunctions.rst  network.rst  networkSet.rst  plotting.rst  qfactor.rst  taper.rst  time.rst  tlineFunctions.rst  util.rst  vectorFitting.rst
doc/source/api/calibration/: deembedding.rst  index.rst
doc/source/api/data/: index.rst
doc/source/api/io/: index.rst
doc/source/api/media/: device.rst  index.rst
doc/source/api/vi/: index.rst  vna.rst
doc/source/citations_ack/: acknowledging.rst  index.rst
doc/source/contributing/: index.rst
doc/source/examples/: README.md  index.rst
doc/source/examples/circuit/: Lumped Element Circuits.ipynb  Voltages and Currents in Circuits.ipynb  Wilkinson Power Splitter.ipynb
doc/source/examples/instrumentcontrol/: VNA Control.ipynb
doc/source/examples/interactive/: Interact Transmission Lines.ipynb  Interactive Coaxial Properties.ipynb  Interactive Mismatched Line.ipynb
doc/source/examples/matching/: Impedance Matching.ipynb
doc/source/examples/metrology/: Calibration With Three Receivers.ipynb  LRRM.ipynb  Measuring a Mutiport Device with a 2-Port Network Analyzer.ipynb  Multi-port Calibration.ipynb  Multiline TRL.ipynb  NanoVNA_V2_4port-splitter.ipynb  One Port Tiered Calibration.ipynb  SOLT Calibration Standards Creation.ipynb  SOLT.ipynb  TRL.ipynb  TwoPortOnePath, EnhancedResponse, and FakeFlip.ipynb
doc/source/examples/mixedmodeanalysis/: Mixed Mode Basics.ipynb  Mixed Mode S and Impedance Transformation.ipynb
doc/source/examples/networks/: Compute Error Between S Parameter Matrices.ipynb  Export Network as Touchstone File.ipynb
doc/source/examples/networksets/: Export Network Set as MDIF File.ipynb  Interpolating Network Sets.ipynb  Sorting Network Sets.ipynb
doc/source/examples/networktheory/: Balanced Network De-embedding.ipynb  Balun_Transformer_Designs.ipynb  CPW media example.ipynb  Correlating microstripline model to measurement.ipynb  DC Extrapolation for Time Domain .ipynb  DefinedAEpTandZ0 media example.ipynb  IEEEP370 Deembedding.ipynb  LNA Example.ipynb  Properties of Rectangular Waveguides.ipynb  Renormalizing S-parameters.ipynb  Time Domain.ipynb  Time domain reflectometry, measurement vs simulation.ipynb  Transmission Line Losses.ipynb  (+3 more)
doc/source/tutorials/: Calibration.ipynb  Circuit.ipynb  Connecting_Networks.ipynb  Deembedding.ipynb  Installation.ipynb  Introduction.ipynb  Media.ipynb  NetworkSet.ipynb  Networks.ipynb  Plotting.ipynb  Q-Factor.ipynb  VectorFitting.ipynb  VirtualInstruments.ipynb  index.rst
src/: circuit.rs  constants.rs  data.rs  docs.rs  error.rs  frequency.rs  instances.rs  lib.rs  math.rs  network.rs  network_set.rs  notebook.rs  plotting.rs  qfactor.rs  taper.rs  time.rs  transmission_line.rs  util.rs  vector_fitting.rs
src/calibration/: calibration.rs  calibration_set.rs  deembedding.rs  mod.rs
src/calibration/tests/: test_calibration.rs  test_calibration_set.rs  test_deembedding.rs
src/io/: citi.rs  csv.rs  general.rs  mdif.rs  metas.rs  mod.rs  touchstone.rs
src/io/tests/: test_citi.rs  test_csv.rs  test_io.rs  test_mdif.rs  test_touchstone.rs  test_ts_spec.rs
src/media/: circular_waveguide.rs  coaxial.rs  cpw.rs  defined_a_ep_tand_z0.rs  device.rs  distributed_circuit.rs  freespace.rs  media.rs  mline.rs  mod.rs  rectangular_waveguide.rs
src/media/tests/: test_all_construction.rs  test_coaxial.rs  test_cpw.rs  test_definedaeptandz0.rs  test_distributed_circuit.rs  test_media.rs  test_mline.rs  test_rectangular_waveguide.rs
src/notebook/: bokeh_.rs  matplotlib_.rs  utils.rs
src/programs/: plot_touchstone.rs
src/tests/: test_circuit.rs  test_convenience.rs  test_frequency.rs  test_init.rs  test_math_functions.rs  test_network.rs  test_network_set.rs  test_plotting.rs  test_qfactor.rs  test_static_data.rs  test_taper.rs  test_tline_functions.rs  test_util.rs  test_vector_fitting.rs
src/vi/: mod.rs  scpi_errors.rs  validators.rs  visa.rs
src/vi/tests/: test_validators.rs  test_vna.rs
src/vi/vna/: mod.rs  vna.rs
tests/: constants.rs  docs.rs  media_device.rs  metas.rs  nanovna.rs  scpi_errors.rs  time.rs
tests/fixtures/: ansys.ts  ansys_modal_data.s2p  double_option_line.s2p  noise.ts  simple_touchstone.s2p
(+29 files in other folders)
